Added User Disconnect

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,11 +19,11 @@ block content
                 .message this is awesome
           .ui.items.chat
             .item(ng-repeat="message in messages")
-              .content(ng-if = "!message.type")
+              .content(ng-if = "!message.type.code")
                 span [SERVER]
                 a.header.name {{ message.username }} &nbsp;
                 .description.message
-                  | katildi.
+                  | {{ message.type.status }}
           .ui.action.input.fluid
             input(type='text', placeholder='Type here...')
             button.ui.button Send
